--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1373,6 +1373,9 @@ header{
     margin: 5px; /* Smaller margins on very small screens */
   }
 }
+#chartTabContent .btn.active {
+  background-color: #055361;
+  border-color: #055361;
 
-
+} 
 
